feat: make memory change NPC treatment
